--- a/index.html
+++ b/index.html
@@ -6,26 +6,45 @@
     <title>LB1</title>
 </head>
 <body>
+    <p><b>Оформленный текст</b></p>
     <p>Получение <b>ортфосфорной</b> кислоты:</p>
     <p>P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O&#8594;H<sub>3</sub>PO<sub>4</sub></p>
+    <br>
+    <br>
+    <p><b>Список</b></p>
     <p>
         <ul>
-            <li>item1
+            <li>Спеціальність СП
                 <ul>
-                    <li>item1.1</li>
-                    <li>item1.2</li>
+                    <li>КІУКІ-20-6</li>
+                    <li>КІУКІ-20-7</li>
+                    <li>КІУКІ-20-8</li>
+                    <li>КІУКІу-20-2</li>
                 </ul>
             </li>
-            <li>item2
+            <li>Спеціальність КСМ
                 <ul>
-                    <li>item2.1</li>
-                    <li>item2.2</li>
+                    <li>КІУКІ-20-1</li>
+                    <li>КІУКІ-20-2</li>
+                    <li>КІУКІ-20-9</li>
+                    <li>КІУКІу-20-7</li>
+                </ul>
+            </li>
+            <li>Спеціальність СКС
+                <ul>
+                    <li>КІУКІ-20-4</li>
+                    <li>КІУКІ-20-5</li>
+                    <li>КІУКІ-20-10</li>
+                    <li>КІУКІу-20-1</li>
+                    <li>КІУКІу-20-9</li>
+                    <li>КІУКІу-20-10</li>
                 </ul>
             </li>
         </ul>
     </p>
     <br>
     <br>
+    <p><b>Таблица</b></p>
     <p>
         <table border = "1">
             <tr>
@@ -81,13 +100,18 @@
             </tr>  
         </table>
     </p>
+    <br>
+    <br>
+    <p><b>Форма с управляющими элементами</b></p>
     <p>
         <b>Enter word you want to find</b> 
-        <form target = "_self">
-        <input name="word_to_find" type = "search" maxlength = "10" placeholder="word to find" required autofocus>
-        <button>Find</button>
+        <form>
+        <input name="word_to_find" type = "search" placeholder="type to find">
+        <br>
         <input value = "Find" type = "submit">
     </form></p>
+    <br><br>
+    <p><b>Ссылки и изображения</b></p>
     <p><a href = "secondpage.html">To the second page</a></p>
 </body>
 </html>
