--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <br>
     <p><b>Форма с управляющими элементами</b></p>
     <p>
-        <b>Enter word you want to find</b> 
         <form>
+        <label>Enter word you want to find:</label><br>
         <input name="word_to_find" type = "search" placeholder="type to find">
         <br>
         <input value = "Find" type = "submit">
