--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <body>
     <p><b>Оформленный текст</b></p>
     <p>Получение <b>ортфосфорной</b> кислоты:</p>
-    <p>P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O&#8594;H<sub>3</sub>PO<sub>4</sub></p>
+    P<sub>2</sub>O<sub>5</sub>+3H<sub>2</sub>O&#8594;H<sub>3</sub>PO<sub>4</sub>
     <br>
     <br>
     <p><b>Список</b></p>
-    <p>
         <ul>
             <li>Спеціальність СП
                 <ul>
@@ -41,11 +40,9 @@
                 </ul>
             </li>
         </ul>
-    </p>
     <br>
     <br>
     <p><b>Таблица</b></p>
-    <p>
         <table border = "1">
             <tr>
                 <td colspan="4" align="center">Прогноз погоди</td>
@@ -99,17 +96,15 @@
                 <td>Швидкість повітря 18 м/с</td>
             </tr>  
         </table>
-    </p>
     <br>
     <br>
     <p><b>Форма с управляющими элементами</b></p>
-    <p>
-        <form>
+    <form>
         <label>Enter word you want to find:</label><br>
         <input name="word_to_find" type = "search" placeholder="type to find">
         <br>
         <input value = "Find" type = "submit">
-    </form></p>
+    </form>
     <br><br>
     <p><b>Ссылки и изображения</b></p>
     <p><a href = "secondpage.html">To the second page</a></p>
